<resources>
    <string name="app_name">CabPoint</string>
    <string name="first_name">(*)First Name</string>
    <string name="last_name">(*)Last Name</string>
    <string name="phone_number">(*)Enter Your Phone Number</string>
    <string name="email">(*)Enter Your Email (Required)</string>
    <string name="password">(*)Enter Your Password (Required)</string>
    <string name="promo_code">Add a promo code</string>
    <string name="password_login">Password</string>
    <string name="email_login">Email/Phone</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="title_home">Home</string>
    <string name="title_work">Work</string>
    <string name="where_to">Where to</string>
    <string name="required">Required</string>
    <string name="loading">Loading</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="login">Login</string>
    <string name="phonecode_desc1">We have called you on the number\ngiven.Please check your call log.\n\nTo Complete your phone number verification\nplease enter last 5 digits of the number.</string>
    <string name = "hello">Hello</string>
    <string name="titleHome">Home</string>
    <string name="test">This is my first test commit</string>
    <string name="search_location">Search Location</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="tap_add_lbl">Tap to Add</string>
    <string name="work_lbl">Work</string>
    <string name="recever_email">To recover your password please provide\nthe email address you specified during registration.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="personal_ride">Your Personal Ride</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="free_ride">Free Rides</string>
    <string name="promo">Promotions</string>
    <string name="setting">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_singup">SingupActivity</string>
</resources>
