<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_go_ride"
            android:checked="true"
            android:title="@string/personal_ride" />

        <item
            android:id="@+id/menu_go_payment"
            android:checked="false"
            android:title="@string/payment" />
        <item
            android:id="@+id/menu_go_history"
            android:checked="false"
            android:title="@string/history" />
        <item
            android:id="@+id/menu_go_promotion"
            android:checked="false"
            android:title="@string/promo" />
        <item
            android:id="@+id/menu_go_freerides"
            android:checked="false"
            android:title="@string/free_ride" />
        <item
            android:id="@+id/menu_go_setting"
            android:checked="false"
            android:title="@string/setting" />
        <item
            android:id="@+id/menu_go_contact_us"
            android:checked="false"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/menu_go_logout"
            android:checked="false"
            android:title="@string/logout" />
        />

    </group>
</menu>