<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">
    <include
        android:id="@+id/inc_common_header_colletion"
        layout="@layout/common_header" />

    <ScrollView
        android:layout_below="@id/inc_common_header_colletion"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/black"

                android:id="@+id/signup_img">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/p100"
                    android:src="@drawable/cabpointlogo"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/signup_img"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p20"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="@dimen/p0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/p20"
                        android:layout_marginRight="@dimen/p20"
                        android:singleLine="true"
android:textColor="@color/colorAccent"
                        android:textColorHint="@color/silver"
                        android:hint="@string/email_login"
                        android:textSize="@dimen/ts16"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p20"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="@dimen/p0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/p20"
                        android:layout_marginRight="@dimen/p20"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColorHint="@color/silver"
                        android:hint="@string/password_login"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/ts16"

                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p20"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="@dimen/p0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:layout_marginLeft="@dimen/p20"
                        android:layout_marginRight="@dimen/p20"
                        android:text="@string/login"
                        android:textSize="@dimen/ts16"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"


                        />
                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="@dimen/p0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:layout_marginLeft="@dimen/p20"
                        android:layout_marginRight="@dimen/p20"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sign_up"
                        android:textSize="@dimen/ts16"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p20"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btn_forget_password"
                        android:layout_width="@dimen/p0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:layout_marginLeft="@dimen/p20"
                        android:layout_marginRight="@dimen/p20"
                        android:layout_gravity="center_vertical"
                        android:text="@string/forget_pass"
                        android:textSize="@dimen/ts16"
                        android:textColor="@color/white"

                        />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>





    </ScrollView>
</RelativeLayout>