<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_silver"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/light_silver"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backbutton"
                style="@style/app_left_right_margin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/p5"
            android:layout_marginLeft="@dimen/p5"
            android:orientation="horizontal"
            style="@style/edit_text_style_where_to"

            android:background="@color/white"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="@dimen/p0"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/p10"
                android:layout_marginBottom="@dimen/p10"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:src="@mipmap/locationpin" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="@dimen/p0"
                android:layout_height="match_parent"

                android:layout_weight="4"

                android:orientation="vertical"
                android:weightSum="2">



                    <EditText
                        android:id="@+id/currentLocation_autocomplteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:hint="Current Location"
                        android:paddingLeft="10dp"
                        android:textSize="16sp"
                        android:background="@null"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/edit_text_hint" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>



                    <EditText
                        android:id="@+id/searchLocation_autocomplteTextView"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:hint="@string/search_location"
                        android:background="@null"
                        android:paddingLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/edit_text_hint" />




            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/homeLl_whereTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="7">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@mipmap/suggest_pin" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/titleHome"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/homeAddress_whereTo"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/tap_add_lbl" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/workLl_whereTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="7">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@mipmap/suggest_pin" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/work_lbl"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/workAddress_whereTo"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/tap_add_lbl" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/location_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>
